objects/analyticscc__DB_Template__c.object
<CustomObject>
    <fields>
        <fullName>analyticscc__DB_Name__c</fullName>
        <label>DB Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>analyticscc__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>analyticscc__Section_Name_1__c</fullName>
        <label>Section Name 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>analyticscc__Section_Name_2__c</fullName>
        <label>Section Name 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>analyticscc__Section_Name_3__c</fullName>
        <label>Section Name 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>analyticscc__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single KPI</fullName>
                </value>
                <value>
                    <fullName>Multi KPI</fullName>
                </value>
                <value>
                    <fullName>Snapshot KPI</fullName>
                </value>
                <value>
                    <fullName>Actual/Target</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DB Template</label>
    <nameField>
        <displayFormat>DB-{0000}</displayFormat>
        <label>DB Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DB Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>